@@ -16,5 +16,7 @@ _gaq.push(['_trackPageview']);
   ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
   var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
 })();&lt;/script&gt;</property>
+  <property name="disable_nonfolderish_sections"
+    type="boolean">True</property>
  </object>
 </object>
