@@ -12,4 +12,13 @@
       profile="intranett.policy:default"
       />
 
+  <genericsetup:upgradeStep
+      title="Upgrade intranett.policy from 2 to 3."
+      description="Disable non-folderish sections"
+      source="2"
+      destination="3"
+      handler="intranett.policy.upgrades.steps.disable_nonfolderish_sections"
+      profile="intranett.policy:default"
+      />
+
 </configure>
