@@ -1,0 +1,6 @@
+from Products.CMFCore.utils import getToolByName
+
+
+def disable_nonfolderish_sections(context):
+    ptool = getToolByName(context, 'portal_properties')
+    ptool.site_properties.disable_nonfolderish_sections = True
